--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 
     .container { width: min(1100px, 92%); margin-inline: auto; }
 
-    /* Header */
     header {
       position: sticky;
       top: 0;
@@ -85,7 +84,6 @@
       border: none;
     }
 
-    /* Hero */
     .hero { padding: 72px 0 32px; }
     .hero-grid { display:grid; grid-template-columns: 1.2fr .8fr; gap: 36px; align-items:center; }
 
@@ -184,6 +182,7 @@
             <a class="btn primary" href="#projects">View Projects</a>
             <a class="btn" href="#contact">Contact</a>
             <a class="btn" href="https://www.linkedin.com/in/jonnalagadda-karthik01/" target="_blank">LinkedIn ↗</a>
+            <a class="btn" href="https://github.com/KarthikJonnalagadda" target="_blank">GitHub ↗</a>
           </div>
         </div>
         <div class="card">
@@ -282,6 +281,14 @@
             <strong>Introduction to Career Skills in Data Analytics</strong> – LinkedIn Learning<br>
             <a href="https://lnkd.in/eBxSXHN7" target="_blank">View Certification ↗</a>
           </li>
+          <li style="margin-bottom:12px;">
+            <strong>Data Analytics Foundation Course</strong> – LinkedIn Learning<br>
+            <a href="https://lnkd.in/eBxSXHN7" target="_blank">View Certification ↗</a>
+          </li>
+          <li>
+            <strong>Data Science Career Essentials</strong> – LinkedIn Learning<br>
+            <a href="https://lnkd.in/eBxSXHN7" target="_blank">View Certification ↗</a>
+          </li>
         </ul>
       </div>
     </section>
@@ -292,6 +299,7 @@
       <div class="card">
         <p>Email: <a href="mailto:jonnalagadda.karthik22@st.niituniversity.in">jonnalagadda.karthik22@st.niituniversity.in</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/jonnalagadda-karthik01/" target="_blank">/in/jonnalagadda-karthik01</a></p>
+        <p>GitHub: <a href="https://github.com/KarthikJonnalagadda" target="_blank">github.com/KarthikJonnalagadda</a></p>
         <p>Phone: <a href="tel:+919392991430">+91 93929 91430</a></p>
       </div>
     </section>
